# openmuse-studio

./: .dockerignore  .env.example  .gitignore  Makefile  OpenMuse.command  README.md  docker-compose.yml  pyproject.toml  start.sh  status.sh  stop.sh
.devcontainer/: devcontainer.json  post-create.sh  post-start.sh
.github/workflows/: ci.yml
apps/api/openmuse_api/: __init__.py  config.py  db.py  main.py  schemas.py  worker.py
apps/api/openmuse_api/providers/: __init__.py
apps/api/openmuse_api/services/: analysis.py  media.py  planner.py  queue.py  release.py  render.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
cli/: openmuse.py
docker/: api.Dockerfile
docs/: architecture.md  provider-sdk.md
examples/: README.md  demo.srt
examples/rendered/: mv.ass  project.json
templates/album-cover/: README.md
templates/editorial-lyrics/: README.md
templates/kinetic-lyrics/: README.md
templates/visual-story/: README.md
tests/: conftest.py  test_api.py  test_media.py  test_provider.py  test_release.py  test_render.py  test_settings.py  test_timeline.py
