[project]
name = "openmuse-studio"
version = "0.1.0"
description = "Open-source AI music workspace with synchronized lyric video rendering."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "python-multipart>=0.0.20,<1",
  "httpx>=0.28,<1",
  "redis>=5.2,<6",
  "pydantic-settings>=2.7,<3",
  "pillow>=11,<13",
  "pytest>=8.3,<9",
]

[project.optional-dependencies]
asr = ["faster-whisper>=1.1,<2"]
audio-ml = ["librosa>=0.10,<1", "soundfile>=0.13,<1", "basic-pitch>=0.4,<1"]
all = ["faster-whisper>=1.1,<2", "librosa>=0.10,<1", "soundfile>=0.13,<1", "basic-pitch>=0.4,<1"]

[project.scripts]
openmuse = "cli.openmuse:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "cli*", "packages*"]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
